# reports2

./: .Rprofile  .copier-answers.yml  .devpodignore  .gitignore  .markdownlint.json  .panache.toml  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  DESCRIPTION  Justfile  README.md  dprint.json  pyproject.toml
.cursor/commands/: copy-edit.md
.devcontainer/: Dockerfile  checkREnvironment.ps1  checkREnvironment.sh  devcontainer.json  install-feature.sh  install-ohmyzsh-plugins.sh  install-prek-deps.sh  install-prek.sh  install-python-deps.sh  install-r-deps.sh  installDependencies.sh  installOhmyzshPlugins.sh  postCreateCommand.ps1  postCreateCommand.sh  setupShellAliases.sh
.devcontainer/devpod/: up-aws-list.sh  up-aws.sh  up-local.sh
.github/ISSUE_TEMPLATE/: issue_template.yml
.github/workflows/: data-science-main.yml  devcontainer-prebuild.yml
context/: README.md
context/code/: icml_filters.md  illustrator_svg_infographics.md  plotnine_sizing_in_quarto.md  quarto_extensions.md  quarto_html_rendering_internals.md  quarto_manuscript_embed_bug.md
context/domain/: cost_allocation_cross_subsidies_and_rate_design.md  rie_distribution_planning_and_thermal_screening.md  traditional_vs_hourly_ecoss_and_mcos.md
context/il_pgl_rate_case/: NPA_outline.md  direct_vs_rebuttal.md  exemplar_inventory.md  format_conventions.md  tone_and_rhetoric.md
context/methods/: ny_hp_rates_story_building_selection.md  ri_docket_4770_cost_allocation_arguments.md  ri_docket_4770_rate_design_arguments.md  ri_hp_rates_rie_objections_and_responses.md  testimony_style_guide.md
context/sources/: rie_2024_peak_forecast_2025-2039.md  rie_distribution_planning_guide.md  rie_distribution_planning_study_process.md
context/tools/: quarto_manuscript_embed_bug.md
data/cambium/: Justfile  cambium_downloader.py  convert_to_parquet.py
docs/il_lea/: index.html
docs/ny_aeba_grid/: index-preview.html  index.html  index.qmd
docs/ny_hp_rates/: diff.html  index-preview.html  index.html  index.qmd
docs/ri_hp_rates/: index.html
lib/: __init__.py  cairo.py  diff_report.py  inflation.R  nyserda_cef_utils.R  quarto.py  rdp.py  report_clean.py  report_publish.py  report_render.py  utility_mapping.R
lib/data/: gsheets.py  s3.py
lib/eia/: fetch_delivered_fuels_prices_eia.py  fetch_eia_hs861m.py  fetch_eia_state_profile.py
lib/ggplot/: switchbox_theme.R
lib/great_tables/: __init__.py  icml.py  switchbox_theme.py
lib/just/: clean.py  diff.py  draft.py  icml_crossrefs.py  icml_sidenotes.py  publish.py  render.py  typeset.py
lib/plotnine/: __init__.py  svg_optimize.py  switchbox_theme.py
lib/rates_analysis/: create_sb_housing_units.R  heat_pump_rate_funcs.R  heat_pump_rate_plots.R
notebooks/: Justfile  _quarto.yml  index.qmd  md_example.qmd  py_example.qmd  r_example.qmd
rate-utils/: plotting_utils.py
reports/: references.bib
reports/.style/: inline_svgs.py  notebook-preview.html  switchbox.html  switchbox.scss
reports/il_lea/: Justfile  (+3 more)
reports2/: __init__.py
style/: switchbox-slides.scss  switchbox.html  switchbox.scss  varunr.mplstyle
tests/: test_foo.py  test_placeholder.py  test_switchbox_gt_theme.py
(+210 files in other folders)
