[project]
name = "reports2"
version = "0.0.1"
description = "This repo contains Switchbox's reports."
authors = [{ name = "Switchbox", email = "hello@switch.box" }]
readme = "README.md"
keywords = ['python']
requires-python = ">=3.9,<4.0"
dependencies = [
    "polars>=1.32.3",
    "pyarrow>=21.0.0",
    "seaborn>=0.13.2",
    "numpy>=2.0.2",
    "ipykernel>=6.30.1",
    "nbformat>=5.10.4",
    "nbclient>=0.10.2",
    "boto3>=1.7.84",
]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Repository = "https://github.com/switchbox-data/reports2"

[dependency-groups]
dev = [
    "pytest>=7.2.0",
    "ruff>=0.11.5",
    "ty>=0.0.1a21",    
    "deptry>=0.20.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py313"
line-length = 120
fix = true

[tool.ruff.lint]
select = ["E","W","F","B","I","UP","SIM","C4","RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ty.environment]
python = "./.venv"
python-version = "3.13"
